last day changes: added caption for clarity

--- a/data mocking and analysis/Algorithm for Similar Therapist Suggestion System.ipynb
+++ b/data mocking and analysis/Algorithm for Similar Therapist Suggestion System.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ef8c343d",
+   "metadata": {},
+   "source": [
+    "## This algorithm should give similar 10 therapist suggestions for a therapist name a user searches for, based on our therapist list. \n",
+    "If deployed, it might also be put together in the search result connected by BE/developed by FE as suggestions on the side if they do not search for the name directly, but click on the profile."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "43dec3c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from scipy import stats\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel, cosine_similarity"
@@ -18,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fa797123",
    "metadata": {},
    "outputs": [],
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2a72a99d",
    "metadata": {
     "scrolled": true
@@ -273,7 +280,7 @@
        "5                       8  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "4c4eea23",
    "metadata": {},
    "outputs": [],
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "b49278e4",
    "metadata": {},
    "outputs": [],
@@ -306,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "481ab287",
    "metadata": {},
    "outputs": [
@@ -316,7 +323,7 @@
        "(130, 355)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "a9de82e4",
    "metadata": {},
    "outputs": [],
@@ -337,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "419e5bcc",
    "metadata": {},
    "outputs": [
@@ -372,7 +379,7 @@
        "       0.12382822, 0.03181066, 0.03235881, 0.00367424, 0.        ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "7dfcbcb5",
    "metadata": {},
    "outputs": [],
@@ -395,12 +402,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "id": "31997695",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_recommendations(Name):\n",
+    "def suggest_therapist(Name):\n",
     "    idx = indexes[Name]\n",
     "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
     "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
@@ -411,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "id": "3c53779f",
    "metadata": {},
    "outputs": [
@@ -431,13 +438,14 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_recommendations('Dipl.-Med. Katharina Bolze')"
+    "#put in different therapist names to check the suggestions\n",
+    "suggest_therapist('Dipl.-Med. Katharina Bolze')"
    ]
   },
   {
