last day changes: added captions for clarity

--- a/data mocking and analysis/Algorithm for Success Rate and Average Waiting Time.ipynb
+++ b/data mocking and analysis/Algorithm for Success Rate and Average Waiting Time.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "25b8e6be",
+   "metadata": {},
+   "source": [
+    "## Predicting the Success Rate of Getting an Immediate Response and Waiting Time to Get an Appointment\n",
+    "\n",
+    "### How long do people have to wait until they can get the first appointment with a therapist on Theraply app? Will therapists reply to the user when there are so many other users seeking for help too? In this notebook, we created a code that can calculate the chance of getting an immediate response considering the number of other users on the app, and also the average waiting time for the selected therapists."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "7ba097cc",
    "metadata": {},
    "outputs": [],
@@ -10,26 +20,23 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import sklearn\n",
-    "from scipy import stats\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-    "from sklearn.metrics.pairwise import linear_kernel, cosine_similarity"
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "854b45e4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the mocked model data of therapist and their other users\n",
     "df1 = pd.read_csv('/Users/tikaramadhini/Documents/theraplydata/mock_model.csv', encoding_errors='ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "d81f0500",
    "metadata": {},
    "outputs": [
@@ -148,7 +155,7 @@
        "[130 rows x 3 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "29ef7a52",
    "metadata": {},
    "outputs": [
@@ -279,7 +286,7 @@
        "[121 rows x 3 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,17 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "441a6ee0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the mocked test data from mr.A\n",
     "df2 = pd.read_csv('/Users/tikaramadhini/Documents/theraplydata/mock_mrA_therapists.csv', encoding_errors='ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "771db63c",
    "metadata": {},
    "outputs": [
@@ -400,7 +408,7 @@
        "9      Dipl.-Med. Katharina Bolze    1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,13 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "33c2e428",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pred(df2):\n",
-    "    matching_names = df1.Name.isin(df2.Name)\n",
+    "def pred(x):\n",
+    "    matching_names = df1.Name.isin(x.Name)\n",
     "    df3 = df1.loc[matching_names, :]\n",
     "    calc = 1 / (df3['OtherUsers'] + 1)\n",
     "    sr = 100 * (calc.mean())\n",
@@ -428,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "60a8df33",
    "metadata": {},
    "outputs": [
@@ -438,7 +446,7 @@
        "'Based on your selection, your success rate of getting an immediate response from our therapist is: 11.690226440226436 %, with the shortest waiting time of 2 weeks, and the average waiting time of 7.0 weeks.'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
